tests/snapshots/antlr4_rust_gen_cli__fatal_entry_preserves_prior_recovery_diagnostics.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: fatal_entry
---
EntrySnapshot {
    returned_error: ParserError {
        line: 1,
        column: 3,
        message: "mismatched input 'd' expecting {'b', 'c'}",
        offending: Some(
            TokenId(
                3,
            ),
        ),
    },
    syntax_errors: 2,
    events: [
        Event {
            offending_text: Some(
                "d",
            ),
            line: 1,
            column: 1,
            message: "mismatched input 'd' expecting {'b', 'c'}",
            error: None,
        },
        Event {
            offending_text: Some(
                "d",
            ),
            line: 1,
            column: 3,
            message: "mismatched input 'd' expecting {'b', 'c'}",
            error: Some(
                ParserError {
                    line: 1,
                    column: 3,
                    message: "mismatched input 'd' expecting {'b', 'c'}",
                    offending: Some(
                        TokenId(
                            3,
                        ),
                    ),
                },
            ),
        },
    ],
}
