tests/snapshots/antlr4_rust_gen_cli__generated_codegen_api_checks.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: normalize_current_package_version(&checks)
---
lexer: antlr4_runtime::__antlr4_rust_require_codegen_api!(3, "<generator-version>");
parser: antlr4_runtime::__antlr4_rust_require_codegen_api!(3, "<generator-version>");
