tests/snapshots/antlr4_rust_gen_cli__imported_antlr4rust_alias_owner.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: alias_excerpt
---
const DelegateParser_ID: i32 = 1;
DelegateParser_ID == ID
