tests/snapshots/antlr4_rust_gen_cli__inferred_mutual_entries_generated_api.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: api
---
[
    "callback enter_a",
    "callback enter_b",
    "callback enter_every_rule",
    "callback exit_a",
    "callback exit_b",
    "callback exit_every_rule",
    "callback visit_a",
    "callback visit_b",
    "callback visit_children",
    "callback visit_error_node",
    "callback visit_rule",
    "callback visit_terminal",
    "const EOF",
    "const ID",
    "const RULE_A",
    "const RULE_B",
    "const T__0",
    "const T__1",
    "const WS",
    "enum RecursiveLeftEntriesValidationError",
    "fn a",
    "fn add_error_listener",
    "fn add_parse_listener",
    "fn b",
    "fn child_count",
    "fn clear_dfa",
    "fn compile_parse_tree_pattern",
    "fn downcast_ref",
    "fn eof_token",
    "fn id_token",
    "fn into_parsed_file",
    "fn into_token_store",
    "fn into_token_stream",
    "fn la",
    "fn lt",
    "fn metadata",
    "fn new",
    "fn node",
    "fn parse",
    "fn parse_stream",
    "fn parse_stream_validated",
    "fn parse_stream_with_parser",
    "fn parse_tree_storage",
    "fn parse_validated",
    "fn parse_with_parser",
    "fn parsed_file",
    "fn parser_atn",
    "fn parser_dfa_stats",
    "fn prediction_context_stats",
    "fn remove_error_listeners",
    "fn remove_parse_listeners",
    "fn reset",
    "fn rule_index",
    "fn rule_names",
    "fn rule_node",
    "fn set_token_stream",
    "fn start",
    "fn symbol",
    "fn text",
    "fn token_store",
    "fn token_stream",
    "fn token_stream_mut",
    "fn tree",
    "fn validate",
    "fn validate_tree_structure",
    "fn walk",
    "fn walk_with_invocation_states",
    "fn with_hooks",
    "static METADATA",
    "struct AContext",
    "struct BContext",
    "struct ErrorNode",
    "struct RecursiveLeftEntriesParser",
    "struct RecursiveLeftEntriesParserParseOutput",
    "struct RecursiveLeftEntriesTreeWalker",
    "struct RecursiveLeftEntriesValidatedTree",
    "struct RecursiveLeftEntriesValidatedTreeWalker",
    "struct StoredTreeContext",
    "struct TerminalNode",
    "struct ValidatedRuleNode",
    "struct ValidatedTreeContext",
    "struct __GeneratedInput",
    "struct __GeneratedTokenView",
    "struct __RuleAttrs0",
    "struct __RuleAttrs1",
    "trait FromValidatedRuleNode",
    "trait RecursiveLeftEntriesListener",
    "trait RecursiveLeftEntriesValidatedListener",
    "trait RecursiveLeftEntriesValidatedVisitable",
    "trait RecursiveLeftEntriesValidatedVisitor",
    "trait RecursiveLeftEntriesVisitable",
    "trait RecursiveLeftEntriesVisitor",
    "type ParseTreeWalker",
    "type ValidatedParseTreeWalker",
]
