tests/snapshots/antlr4_rust_gen_cli__inlined_token_accessors_generated_api.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: generated_parser_api(&parser)
---
[
    "callback enter_active",
    "callback enter_collision",
    "callback enter_every_rule",
    "callback enter_expr",
    "callback enter_prim",
    "callback enter_recovered",
    "callback enter_start",
    "callback exit_active",
    "callback exit_collision",
    "callback exit_every_rule",
    "callback exit_expr",
    "callback exit_prim",
    "callback exit_recovered",
    "callback exit_start",
    "callback visit_error_node",
    "callback visit_terminal",
    "const DIRECT",
    "const EOF",
    "const ID",
    "const RULE_ACTIVE",
    "const RULE_COLLISION",
    "const RULE_EXPR",
    "const RULE_PRIM",
    "const RULE_RECOVERED",
    "const RULE_START",
    "const T__0",
    "const T__1",
    "const T__2",
    "const WS",
    "enum InlinedTokensValidationError",
    "fn active",
    "fn add_error_listener",
    "fn add_parse_listener",
    "fn child_count",
    "fn clear_dfa",
    "fn collision",
    "fn compile_parse_tree_pattern",
    "fn direct_terminals",
    "fn direct_tokens",
    "fn downcast_ref",
    "fn eof_token",
    "fn expr",
    "fn expr_children",
    "fn id_token",
    "fn id_tokens",
    "fn into_parsed_file",
    "fn into_token_store",
    "fn into_token_stream",
    "fn is_error",
    "fn is_missing",
    "fn la",
    "fn lt",
    "fn metadata",
    "fn new",
    "fn node",
    "fn parse",
    "fn parse_stream",
    "fn parse_stream_validated",
    "fn parse_stream_with_parser",
    "fn parse_tree_storage",
    "fn parse_validated",
    "fn parse_with_parser",
    "fn parsed_file",
    "fn parser_atn",
    "fn parser_dfa_stats",
    "fn prediction_context_stats",
    "fn prim",
    "fn recovered",
    "fn remove_error_listeners",
    "fn remove_parse_listeners",
    "fn reset",
    "fn rule_index",
    "fn rule_names",
    "fn rule_node",
    "fn set_token_stream",
    "fn start",
    "fn symbol",
    "fn text",
    "fn token_store",
    "fn token_stream",
    "fn token_stream_mut",
    "fn tree",
    "fn validate",
    "fn validate_tree_structure",
    "fn walk",
    "fn walk_with_invocation_states",
    "fn with_hooks",
    "static METADATA",
    "struct ActiveContext",
    "struct CollisionContext",
    "struct ErrorNode",
    "struct ExprContext",
    "struct InlinedTokensParser",
    "struct InlinedTokensParserParseOutput",
    "struct InlinedTokensTreeWalker",
    "struct InlinedTokensValidatedTree",
    "struct InlinedTokensValidatedTreeWalker",
    "struct PrimContext",
    "struct RecoveredContext",
    "struct StartContext",
    "struct StoredTreeContext",
    "struct TerminalNode",
    "struct ValidatedRuleNode",
    "struct ValidatedTreeContext",
    "struct __GeneratedInput",
    "struct __GeneratedTokenView",
    "struct __RuleAttrs0",
    "struct __RuleAttrs1",
    "struct __RuleAttrs2",
    "struct __RuleAttrs3",
    "struct __RuleAttrs4",
    "struct __RuleAttrs5",
    "trait FromValidatedRuleNode",
    "trait InlinedTokensListener",
    "trait InlinedTokensValidatedListener",
    "type ParseTreeWalker",
    "type ValidatedParseTreeWalker",
]
