tests/snapshots/antlr4_rust_gen_cli__lexer_left_recursion_diagnostics.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: stderr
---
Error: Custom { kind: InvalidInput, error: "error[G4A005]: <grammar>:3:0: mutually left-recursive rules: [A]\nerror[G4A005]: <grammar>:4:0: mutually left-recursive rules: [B, C]\n" }
