tests/snapshots/antlr4_rust_gen_cli__named_parser_actions_semantics_manifest.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: manifest
---
{
  "version": 2,
  "policy": "error",
  "note": "unknown coordinates currently default to assume-true; a future minor release changes the default to error",
  "options": [],
  "grammars": [
    {
      "kind": "lexer",
      "name": "ActionTimingLexer",
      "coordinates": []
    },
    {
      "kind": "parser",
      "name": "ActionTimingParser",
      "coordinates": [
        {"kind": "parser-action", "rule": "parameterized", "rule_index": 6, "index": 0, "atn_state": 47, "line": 28, "column": 6, "body": "ObserveArgument();", "disposition": "hooked", "template": "Hook(observe_argument)"},
        {"kind": "parser-predicate", "rule": "body", "rule_index": 7, "index": 0, "atn_state": null, "line": 33, "column": 6, "body": "this.IsEntered()", "disposition": "hooked", "template": "Hook"},
        {"kind": "parser-action", "rule": "body", "rule_index": 7, "index": 1, "atn_state": 49, "line": 32, "column": 6, "body": "recog.Enter(\"outer\", 1, true);", "disposition": "hooked", "template": "Hook(enter)"},
        {"kind": "parser-action", "rule": "body", "rule_index": 7, "index": 2, "atn_state": 52, "line": 35, "column": 7, "body": "Tick(7);", "disposition": "hooked", "template": "Hook(tick)"},
        {"kind": "parser-action", "rule": "body", "rule_index": 7, "index": 3, "atn_state": 58, "line": 36, "column": 8, "body": "Lose();", "disposition": "hooked", "template": "Hook(lose)"},
        {"kind": "parser-action", "rule": "body", "rule_index": 7, "index": 4, "atn_state": 64, "line": 38, "column": 6, "body": "self.Exit(\"outer\");", "disposition": "hooked", "template": "Hook(exit)"},
        {"kind": "parser-action", "rule": "nested", "rule_index": 8, "index": 5, "atn_state": 66, "line": 42, "column": 6, "body": "EnterScope();", "disposition": "hooked", "template": "Hook(enter_scope)"},
        {"kind": "parser-action", "rule": "nested", "rule_index": 8, "index": 6, "atn_state": 68, "line": 42, "column": 28, "body": "ExitScope();", "disposition": "hooked", "template": "Hook(exit_scope)"},
        {"kind": "parser-action", "rule": "child", "rule_index": 9, "index": 7, "atn_state": 70, "line": 46, "column": 6, "body": "EnterScope();", "disposition": "hooked", "template": "Hook(enter_scope)"},
        {"kind": "parser-action", "rule": "child", "rule_index": 9, "index": 8, "atn_state": 72, "line": 46, "column": 25, "body": "ExitScope();", "disposition": "hooked", "template": "Hook(exit_scope)"},
        {"kind": "parser-action", "rule": "expression", "rule_index": 10, "index": 9, "atn_state": 74, "line": null, "column": null, "body": null, "disposition": "synthetic", "template": null},
        {"kind": "parser-action", "rule": "expression", "rule_index": 10, "index": 10, "atn_state": 76, "line": 51, "column": 9, "body": "Seed();", "disposition": "hooked", "template": "Hook(seed)"},
        {"kind": "parser-action", "rule": "expression", "rule_index": 10, "index": 11, "atn_state": 81, "line": 50, "column": 25, "body": "Reduce();", "disposition": "hooked", "template": "Hook(reduce)"},
        {"kind": "parser-action", "rule": "recoveryBody", "rule_index": 11, "index": 12, "atn_state": 88, "line": 55, "column": 8, "body": "Middle(\"middle\");", "disposition": "hooked", "template": "Hook(middle)"}
      ]
    }
  ]
}
