tests/snapshots/antlr4_rust_gen_cli__parser_action_hook_signature_conflict_diagnostic.snap
---
source: tests/antlr4_rust_gen_cli.rs
expression: normalize_current_package_version(&stderr)
---
Error: Custom { kind: InvalidData, error: "typed semantic helper Mark has conflicting literal signatures [String] and [Integer]" }
